[gd_scene load_steps=5 format=3 uid="uid://cjv3ocjvay3hx"]

[ext_resource type="Script" path="res://scripts/game/spot.gd" id="1_76bsc"]
[ext_resource type="Script" path="res://scripts/material_highlighter.gd" id="2_mfjwg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_om0f2"]
albedo_color = Color(0.862745, 0.729412, 0.243137, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_7g88m"]
size = Vector3(0.6, 0.1, 0.6)

[node name="Spot" type="Node3D"]
script = ExtResource("1_76bsc")

[node name="Sprite3D" type="Sprite3D" parent="."]
axis = 1

[node name="Highlighter" type="Node" parent="." node_paths=PackedStringArray("mesh_to_highlight")]
script = ExtResource("2_mfjwg")
highlight_material = SubResource("StandardMaterial3D_om0f2")
mesh_to_highlight = NodePath("../Sprite3D")

[node name="SelectionHitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SelectionHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0602112, 0)
shape = SubResource("BoxShape3D_7g88m")

[connection signal="input_event" from="SelectionHitbox" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="SelectionHitbox" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SelectionHitbox" to="." method="_on_mouse_exited"]
